--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Node
+# ------
 # Logs
 logs
 *.log
@@ -57,3 +59,12 @@ typings/
 # dotenv environment variables file
 .env
 
+# Processing
+# ------
+.DS_Store
+applet
+application.linux32
+application.linux64
+application.windows32
+application.windows64
+application.macosx
